--- a/todo-ios/MainStoryboard.storyboard
+++ b/todo-ios/MainStoryboard.storyboard
@@ -1,73 +1,95 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="3084" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="4510" systemVersion="12F37" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="2">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="2083"/>
+        <deployment defaultVersion="1552" identifier="iOS"/>
+        <development version="5000" identifier="xcode"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="3742"/>
     </dependencies>
     <scenes>
         <!--View Controller-->
         <scene sceneID="5">
             <objects>
                 <viewController id="2" customClass="ViewController" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yhQ-VV-EUG"/>
+                        <viewControllerLayoutGuide type="bottom" id="s2z-ds-Zmb"/>
+                    </layoutGuides>
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="568"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9EL-0w-D9u">
-                                <constraints>
-                                    <constraint firstAttribute="height" constant="54" id="IMm-bB-XZf"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
-                                <state key="normal" image="check_all.png">
-                                    <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
-                                    <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <state key="highlighted">
-                                    <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                                </state>
-                                <connections>
-                                    <action selector="checkAll:" destination="2" eventType="touchDown" id="W6O-bL-meK"/>
-                                </connections>
-                            </button>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="5b5-PE-kcd">
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="y3s-fk-IWb">
+                                <rect key="frame" x="0.0" y="20" width="320" height="82"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <subviews>
+                                    <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="9EL-0w-D9u">
+                                        <rect key="frame" x="0.0" y="34" width="36" height="54"/>
+                                        <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
+                                        <state key="normal" image="check_all.png">
+                                            <color key="titleColor" red="0.19607843459999999" green="0.30980393290000002" blue="0.52156865600000002" alpha="1" colorSpace="calibratedRGB"/>
+                                            <color key="titleShadowColor" white="0.5" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <state key="highlighted">
+                                            <color key="titleColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                                        </state>
+                                        <connections>
+                                            <action selector="checkAll:" destination="2" eventType="touchDown" id="W6O-bL-meK"/>
+                                        </connections>
+                                    </button>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What needs to be done?" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RBB-pV-G4z">
+                                        <rect key="frame" x="69" y="47" width="247" height="30"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="2" id="9Mw-9P-nWt"/>
+                                        </connections>
+                                    </textField>
+                                    <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="TODO List Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tPB-zD-DHv">
+                                        <rect key="frame" x="69" y="11" width="135" height="21"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                    <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sll-Na-Hnw">
+                                        <rect key="frame" x="207" y="8" width="109" height="30"/>
+                                        <constraints>
+                                            <constraint firstAttribute="width" constant="109" id="2Dx-nI-ppc"/>
+                                        </constraints>
+                                        <fontDescription key="fontDescription" type="system" pointSize="14"/>
+                                        <textInputTraits key="textInputTraits"/>
+                                        <connections>
+                                            <outlet property="delegate" destination="2" id="3Ig-XO-Sno"/>
+                                        </connections>
+                                    </textField>
+                                </subviews>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="326" id="ATl-jU-NKk"/>
-                                    <constraint firstAttribute="height" constant="350" id="mW2-Oc-zhn"/>
+                                    <constraint firstItem="RBB-pV-G4z" firstAttribute="top" secondItem="Sll-Na-Hnw" secondAttribute="bottom" constant="9" id="003-Sv-Rvc"/>
+                                    <constraint firstItem="RBB-pV-G4z" firstAttribute="leading" secondItem="tPB-zD-DHv" secondAttribute="leading" id="32z-TQ-DSJ"/>
+                                    <constraint firstAttribute="centerX" secondItem="Sll-Na-Hnw" secondAttribute="centerX" constant="-101.5" id="5cw-HB-gvR"/>
+                                    <constraint firstItem="Sll-Na-Hnw" firstAttribute="trailing" secondItem="RBB-pV-G4z" secondAttribute="trailing" id="9T3-El-3qh"/>
+                                    <constraint firstAttribute="centerX" secondItem="tPB-zD-DHv" secondAttribute="centerX" constant="23.5" id="Csv-bZ-TVt"/>
+                                    <constraint firstItem="9EL-0w-D9u" firstAttribute="leading" secondItem="y3s-fk-IWb" secondAttribute="leading" id="LCA-Cn-xzh"/>
+                                    <constraint firstItem="9EL-0w-D9u" firstAttribute="top" secondItem="y3s-fk-IWb" secondAttribute="top" constant="34" id="bVF-ow-cKc"/>
+                                    <constraint firstAttribute="bottom" secondItem="RBB-pV-G4z" secondAttribute="bottom" constant="5" id="d54-P7-nF1"/>
+                                    <constraint firstItem="Sll-Na-Hnw" firstAttribute="top" secondItem="y3s-fk-IWb" secondAttribute="top" constant="8" id="dvo-Ag-9MV"/>
+                                    <constraint firstItem="Sll-Na-Hnw" firstAttribute="leading" secondItem="tPB-zD-DHv" secondAttribute="trailing" constant="3" id="jTV-kX-4Fr"/>
+                                    <constraint firstAttribute="centerX" secondItem="RBB-pV-G4z" secondAttribute="centerX" constant="-32.5" id="ndb-Ql-lzb"/>
+                                    <constraint firstItem="Sll-Na-Hnw" firstAttribute="baseline" secondItem="tPB-zD-DHv" secondAttribute="baseline" id="rYu-7O-eef"/>
+                                    <constraint firstItem="RBB-pV-G4z" firstAttribute="leading" secondItem="9EL-0w-D9u" secondAttribute="trailing" constant="33" id="tZH-9T-ROq"/>
+                                    <constraint firstAttribute="bottom" secondItem="9EL-0w-D9u" secondAttribute="bottom" constant="-6" id="yHL-sj-hix"/>
                                 </constraints>
+                            </view>
+                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="5b5-PE-kcd">
+                                <rect key="frame" x="0.0" y="105" width="320" height="416"/>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <connections>
                                     <outlet property="dataSource" destination="2" id="nse-fl-o42"/>
                                     <outlet property="delegate" destination="2" id="bEy-gM-pyd"/>
                                 </connections>
                             </tableView>
-                            <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="TODO List Name:" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="tPB-zD-DHv">
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Sll-Na-Hnw">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="109" id="m09-ck-GE9"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="2" id="3Ig-XO-Sno"/>
-                                </connections>
-                            </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="What needs to be done?" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="RBB-pV-G4z">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="247" id="SIN-Tb-D6s"/>
-                                </constraints>
-                                <fontDescription key="fontDescription" type="system" pointSize="14"/>
-                                <textInputTraits key="textInputTraits"/>
-                                <connections>
-                                    <outlet property="delegate" destination="2" id="9Mw-9P-nWt"/>
-                                </connections>
-                            </textField>
                             <segmentedControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="top" segmentControlStyle="plain" selectedSegmentIndex="0" translatesAutoresizingMaskIntoConstraints="NO" id="5sA-zF-xPG">
-                                <constraints>
-                                    <constraint firstAttribute="width" constant="310" id="qrv-eh-myV"/>
-                                </constraints>
+                                <rect key="frame" x="5" y="535" width="310" height="29"/>
                                 <segments>
                                     <segment title="All"/>
                                     <segment title="Active"/>
@@ -80,20 +102,19 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="RBB-pV-G4z" firstAttribute="trailing" secondItem="Sll-Na-Hnw" secondAttribute="trailing" type="default" id="4aG-ZW-WQX"/>
-                            <constraint firstItem="5b5-PE-kcd" firstAttribute="centerX" secondItem="3" secondAttribute="centerX" type="default" id="As6-YJ-goA"/>
-                            <constraint firstItem="RBB-pV-G4z" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="70" id="JJt-Sm-Zl4"/>
-                            <constraint firstItem="RBB-pV-G4z" firstAttribute="leading" secondItem="tPB-zD-DHv" secondAttribute="leading" type="default" id="K02-yT-Cgb"/>
-                            <constraint firstItem="Sll-Na-Hnw" firstAttribute="top" secondItem="3" secondAttribute="top" constant="3" id="XZY-0u-Rar"/>
-                            <constraint firstItem="RBB-pV-G4z" firstAttribute="top" secondItem="3" secondAttribute="top" constant="36" id="YAu-JR-ofM"/>
-                            <constraint firstAttribute="bottom" secondItem="5sA-zF-xPG" secondAttribute="bottom" constant="5" id="ZrN-H0-9pi"/>
-                            <constraint firstItem="9EL-0w-D9u" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="1" id="cWf-hq-E9H"/>
-                            <constraint firstItem="tPB-zD-DHv" firstAttribute="baseline" secondItem="Sll-Na-Hnw" secondAttribute="baseline" type="default" id="gBB-jW-RtC"/>
-                            <constraint firstItem="5sA-zF-xPG" firstAttribute="centerX" secondItem="5b5-PE-kcd" secondAttribute="centerX" type="default" id="j1t-md-c4r"/>
-                            <constraint firstItem="9EL-0w-D9u" firstAttribute="top" secondItem="3" secondAttribute="top" constant="23" id="qF7-Ti-841"/>
-                            <constraint firstItem="5b5-PE-kcd" firstAttribute="top" secondItem="3" secondAttribute="top" constant="70" id="qdn-hf-O0Y"/>
+                            <constraint firstItem="5sA-zF-xPG" firstAttribute="top" secondItem="5b5-PE-kcd" secondAttribute="bottom" constant="14" id="6WB-g7-uab"/>
+                            <constraint firstItem="s2z-ds-Zmb" firstAttribute="top" secondItem="5sA-zF-xPG" secondAttribute="bottom" constant="5" id="C58-49-gLN"/>
+                            <constraint firstItem="5b5-PE-kcd" firstAttribute="leading" secondItem="3" secondAttribute="leading" id="EUL-Jc-hP9"/>
+                            <constraint firstAttribute="trailing" secondItem="5b5-PE-kcd" secondAttribute="trailing" id="Hny-Pb-hkp"/>
+                            <constraint firstItem="5sA-zF-xPG" firstAttribute="centerX" secondItem="5b5-PE-kcd" secondAttribute="centerX" id="MM2-PQ-ly8"/>
+                            <constraint firstItem="5b5-PE-kcd" firstAttribute="leading" secondItem="y3s-fk-IWb" secondAttribute="leading" id="aov-z1-EIQ"/>
+                            <constraint firstItem="5b5-PE-kcd" firstAttribute="top" secondItem="y3s-fk-IWb" secondAttribute="bottom" constant="3" id="cQe-qQ-xh6"/>
+                            <constraint firstItem="y3s-fk-IWb" firstAttribute="trailing" secondItem="5b5-PE-kcd" secondAttribute="trailing" id="lzP-PI-4WE"/>
+                            <constraint firstItem="5sA-zF-xPG" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="5" id="rN8-MJ-577"/>
+                            <constraint firstItem="y3s-fk-IWb" firstAttribute="top" secondItem="3" secondAttribute="top" constant="20" symbolic="YES" id="sEa-qB-Orf"/>
                         </constraints>
                     </view>
+                    <simulatedStatusBarMetrics key="simulatedStatusBarMetrics"/>
                     <connections>
                         <outlet property="scFilter" destination="5sA-zF-xPG" id="AbC-HH-LeA"/>
                         <outlet property="tfListName" destination="Sll-Na-Hnw" id="6Nl-fk-pOx"/>
@@ -103,7 +124,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="4" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="138" y="1"/>
+            <point key="canvasLocation" x="172" y="36"/>
         </scene>
     </scenes>
     <resources>
